--- a/anvil.yaml
+++ b/anvil.yaml
@@ -6,7 +6,7 @@ services:
 startup: {type: form, module: Form2}
 package_name: FORUM_dragable_list_with_events
 allow_embedding: false
-name: Clone of Draggable List
+name: Draggable List
 runtime_options: {version: 2, client_version: '3', server_version: python3-full}
 metadata: {title: Dragable List}
 startup_form: null
