--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -1,9 +1,18 @@
-container:
-  type: ColumnPanel
-  properties: {col_widths: '{}'}
-components:
-- type: form:OrderableList
-  properties: {}
-  name: orderable_list_1
-  layout_properties: {grid_position: 'ZYUKZX,ICFBXU'}
 is_package: true
+container:
+  type: HtmlTemplate
+  properties: {html: '@theme:standard-page.html'}
+components:
+- type: ColumnPanel
+  properties: {col_widths: '{}'}
+  name: content_panel
+  layout_properties: {slot: default}
+  components:
+  - type: form:OrderableList
+    properties: {}
+    name: orderable_list_1
+    layout_properties: {grid_position: 'OOJTJH,RESJUJ'}
+- type: FlowPanel
+  properties: {}
+  name: navbar_links
+  layout_properties: {slot: nav-right}
