--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,9 +1,9 @@
 unique_ids:
   forms:
-    DragableList: '1645713567802485128378202.1916'
     Form1: '164897104337597113669404.99677'
-    ListItem: '1645714593953420446454903.1217'
     OrderableList: '1645713519570121797636397.2415'
+    OrderableList.DragableList: '1645713567802485128378202.1916'
+    OrderableList.ListItem: '1645714593953420446454903.1217'
   modules: {}
   server_modules: {}
   assets:
