--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -12,6 +12,7 @@ components:
     properties: {text: button_1}
     name: button_1
     layout_properties: {grid_position: 'VGQDMK,KJVFBW'}
+    event_bindings: {click: button_1_click}
   - type: form:OrderableList
     properties: {}
     name: orderable_list_1
