Edited OrderableList, theme.css and Form1

--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -8,15 +8,37 @@ components:
   name: content_panel
   layout_properties: {slot: default}
   components:
+  - type: TextBox
+    properties: {}
+    name: text_box_1
+    layout_properties: {grid_position: 'JXJWMN,TCDRBE'}
   - type: Button
-    properties: {text: button_1}
+    properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: Add Drag Item, font_size: null, font: '',
+      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false, icon: ''}
     name: button_1
     layout_properties: {grid_position: 'VGQDMK,KJVFBW'}
     event_bindings: {click: button_1_click}
   - type: form:OrderableList
-    properties: {}
+    properties: {order_title: Order Test}
     name: orderable_list_1
     layout_properties: {grid_position: 'OOJTJH,RESJUJ'}
+  - type: TextBox
+    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
+      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+      font: '', spacing_above: small, type: number, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false}
+    name: text_box_2
+    layout_properties: {grid_position: 'SIQTZJ,WNMVBF'}
+  - type: Button
+    properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: Remove Drag Item, font_size: null, font: '',
+      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false, icon: ''}
+    name: button_2
+    layout_properties: {grid_position: 'WWOPEK,WRDLCG'}
+    event_bindings: {click: button_2_click}
 - type: FlowPanel
   properties: {}
   name: navbar_links
