--- a/client_code/OrderableList/form_template.yaml
+++ b/client_code/OrderableList/form_template.yaml
@@ -1,4 +1,5 @@
-properties: []
+properties:
+- {name: order_title, type: string, default_value: Order, default_binding_prop: true}
 is_package: true
 events: []
 custom_component: true
