--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -21,7 +21,7 @@ components:
     layout_properties: {grid_position: 'VGQDMK,KJVFBW'}
     event_bindings: {click: button_1_click}
   - type: form:OrderableList
-    properties: {order_title: Order Test, numeration: upper-alpha}
+    properties: {order_title: Order Test, numeration: numerical}
     name: orderable_list_1
     layout_properties: {grid_position: 'OOJTJH,RESJUJ'}
   - type: TextBox
