--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -12,6 +12,7 @@ components:
     properties: {}
     name: text_box_1
     layout_properties: {grid_position: 'JXJWMN,TCDRBE'}
+    event_bindings: {pressed_enter: text_box_1_pressed_enter}
   - type: Button
     properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: Add Drag Item, font_size: null, font: '',
@@ -21,7 +22,7 @@ components:
     layout_properties: {grid_position: 'VGQDMK,KJVFBW'}
     event_bindings: {click: button_1_click}
   - type: form:OrderableList
-    properties: {order_title: Order Test, numeration: numerical}
+    properties: {order_title: Order Test, numeration: upper-roman}
     name: orderable_list_1
     layout_properties: {grid_position: 'OOJTJH,RESJUJ'}
   - type: TextBox
