--- a/client_code/OrderableList/form_template.yaml
+++ b/client_code/OrderableList/form_template.yaml
@@ -24,5 +24,5 @@ components:
   layout_properties: {grid_position: 'ZTAMYY,MGPNRN'}
 container:
   type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {col_widths: '{"EEMRVH":57,"UKZRLK":3}'}
   event_bindings: {show: form_show}
