--- a/client_code/OrderableList/form_template.yaml
+++ b/client_code/OrderableList/form_template.yaml
@@ -4,6 +4,7 @@ properties:
     \ of numeration to add to the ordered list. \n\nOptions:\nnumerical: 1. 2. 3.\
     \ etc.\nlower-alpha: a. b. c. etc.\nupper-alpha: A.B. C. etc.\nlower-roman: i.\
     \ ii. III. iv. etc\nupper-roman: I. II. III. IV. etc."}
+- {name: allow_remove, type: boolean, default_value: true, important: true}
 is_package: true
 events:
 - {name: list_changed, description: when the length or order of the list change, default_event: true}
