--- a/client_code/OrderableList/form_template.yaml
+++ b/client_code/OrderableList/form_template.yaml
@@ -5,6 +5,7 @@ properties:
     \ etc.\nlower-alpha: a. b. c. etc.\nupper-alpha: A.B. C. etc.\nlower-roman: i.\
     \ ii. III. iv. etc\nupper-roman: I. II. III. IV. etc."}
 - {name: allow_remove, type: boolean, default_value: true, important: true}
+- {name: remove_button_properties, type: object, important: true}
 is_package: true
 events:
 - {name: list_changed, description: when the length or order of the list change, default_event: true}
