--- a/client_code/OrderableList/ListItem/form_template.yaml
+++ b/client_code/OrderableList/ListItem/form_template.yaml
@@ -17,3 +17,8 @@ components:
     layout_properties: {grid_position: 'YCPUXX,VUKETJ'}
     event_bindings: {click: remove_button_click}
 is_package: true
+custom_component: true
+properties:
+- {name: item_text, type: string, default_value: '', important: true, default_binding_prop: true}
+- {name: allow_remove, type: boolean, default_value: false, important: true}
+- {name: index, type: number, important: true}
