--- a/client_code/OrderableList/ListItem/form_template.yaml
+++ b/client_code/OrderableList/ListItem/form_template.yaml
@@ -9,8 +9,8 @@ components:
   components:
   - type: Label
     properties: {}
-    name: label_1
-    layout_properties: {grid_position: 'YCPUXX,VWCIPC'}
+    name: item_label
+    layout_properties: {grid_position: 'YCPUXX,VWCIPC SMEWRN,KCQOVF'}
   - name: remove_button
     properties: {text: '', icon: 'fa:remove', align: left, icon_align: top}
     type: Button
@@ -22,3 +22,4 @@ properties:
 - {name: item_text, type: string, default_value: '', important: true, default_binding_prop: true}
 - {name: allow_remove, type: boolean, default_value: false, important: true}
 - {name: index, type: number, important: true}
+- {name: prop, type: string, default_value: '', important: true}
