--- a/client_code/OrderableList/ListItem/form_template.yaml
+++ b/client_code/OrderableList/ListItem/form_template.yaml
@@ -1,10 +1,11 @@
 container:
   type: ColumnPanel
   properties: {col_widths: '{}'}
+  event_bindings: {show: form_show}
 components:
 - type: ColumnPanel
   properties: {role: card, col_widths: '{"VWCIPC":55,"VUKETJ":5}'}
-  name: card_1
+  name: item_lbl_card
   layout_properties: {grid_position: 'DAYONI,RRKOCM'}
   components:
   - type: Label
