--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -27,7 +27,8 @@ components:
     layout_properties: {grid_position: 'VGQDMK,KJVFBW'}
     event_bindings: {click: button_1_click}
   - type: form:OrderableList
-    properties: {order_title: Order Test, numeration: upper-roman, allow_remove: true}
+    properties: {order_title: Order Test, numeration: '', allow_remove: true, item_editable: true,
+      removal_confirm: true}
     name: orderable_list_1
     layout_properties: {grid_position: 'OOJTJH,RESJUJ'}
   - type: TextBox
