--- a/client_code/OrderableList/form_template.yaml
+++ b/client_code/OrderableList/form_template.yaml
@@ -4,8 +4,11 @@ properties:
     \ of numeration to add to the ordered list. \n\nOptions:\nnumerical: 1. 2. 3.\
     \ etc.\nlower-alpha: a. b. c. etc.\nupper-alpha: A.B. C. etc.\nlower-roman: i.\
     \ ii. III. iv. etc\nupper-roman: I. II. III. IV. etc."}
-- {name: allow_remove, type: boolean, default_value: true, important: true}
+- {name: allow_remove, type: boolean, default_value: false, important: true}
 - {name: remove_button_properties, type: object, important: true}
+- {name: item_editable, type: boolean, default_value: false, important: true}
+- {name: editable, type: boolean, default_value: true, important: true}
+- {name: removal_confirm, type: boolean, default_value: false, important: true}
 is_package: true
 events:
 - {name: list_changed, description: when the length or order of the list change, default_event: true}
