--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -29,6 +29,9 @@ roles:
   components: [TextBox]
 - name: selected
   components: [Link]
+- name: inline-popup
+  components: [TextBox, Label]
+  display_in_toolbox: true
 color_scheme:
   preset_groups:
   - name: Primary Colour
