--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -28,7 +28,7 @@ components:
     event_bindings: {click: button_1_click}
   - type: form:OrderableList
     properties: {order_title: Order Test, numeration: '', allow_remove: true, item_editable: true,
-      removal_confirm: true, confirm_removal: false, drag_enabled: true}
+      removal_confirm: true, confirm_removal: false, drag_enabled: false}
     name: orderable_list_1
     layout_properties: {grid_position: 'OOJTJH,RESJUJ'}
   - type: TextBox
