--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -38,14 +38,14 @@ components:
       font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
       background: '', bold: false, underline: false}
     name: text_box_2
-    layout_properties: {grid_position: 'SIQTZJ,WNMVBF'}
+    layout_properties: {grid_position: 'FZZBMI,XVQMCV'}
   - type: Button
     properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: Remove Drag Item, font_size: null, font: '',
       spacing_above: small, icon_align: left, spacing_below: small, italic: false,
       background: '', bold: false, underline: false, icon: ''}
     name: button_2
-    layout_properties: {grid_position: 'WWOPEK,WRDLCG'}
+    layout_properties: {grid_position: 'RNLEDM,TDLKJQ'}
     event_bindings: {click: button_2_click}
 - type: FlowPanel
   properties: {}
