--- a/client_code/OrderableList/form_template.yaml
+++ b/client_code/OrderableList/form_template.yaml
@@ -17,6 +17,7 @@ properties:
     If you want to include the item''s text in the confirmation message, include {item_text}
     in the property value.'}
 - {name: confirm_removal, type: boolean, default_value: false, important: true}
+- {name: visible, type: boolean, default_value: true, important: true}
 is_package: true
 events:
 - {name: list_changed, description: when the length or order of the list change, default_event: true}
