--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -4,8 +4,7 @@ unique_ids:
     OrderableList: '1645713519570121797636397.2415'
     OrderableList.DragableList: '1645713567802485128378202.1916'
     OrderableList.ListItem: '1645714593953420446454903.1217'
-  modules:
-    utility_functions: '1703144416119242603893871.8642'
+  modules: {}
   server_modules: {}
   assets:
     standard-page.html: WLDG3HJCQHQ42WFDBH64LPL45YKDYNZV
