--- a/client_code/OrderableList/DragableList/form_template.yaml
+++ b/client_code/OrderableList/DragableList/form_template.yaml
@@ -11,4 +11,10 @@ components:
     col_widths: {}
     grid_position: RKKGUT,RPQDDD
   components: []
+- name: dragzone_2
+  properties: {role: grid, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+    spacing_below: small, background: ''}
+  type: ColumnPanel
+  layout_properties: {grid_position: 'RKKGUT,PQMHCG'}
 is_package: true
