--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -9,7 +9,7 @@ components:
   layout_properties: {slot: default}
   components:
   - type: TextBox
-    properties: {role: null}
+    properties: {role: null, placeholder: Left Orderable}
     name: text_box_1
     layout_properties: {grid_position: 'JXJWMN,TCDRBE'}
     event_bindings: {}
@@ -20,18 +20,34 @@ components:
     event_bindings: {click: button_3_click}
   - type: Button
     properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: Add Drag Item, font_size: null, font: '',
+      foreground: '', visible: true, text: Add Left Drag Item, font_size: null, font: '',
       spacing_above: small, icon_align: left, spacing_below: small, italic: false,
       background: '', bold: false, underline: false, icon: ''}
     name: button_1
     layout_properties: {grid_position: 'VGQDMK,KJVFBW'}
     event_bindings: {click: button_1_click}
+  - name: text_box_3
+    properties: {placeholder: Right Orderable}
+    type: TextBox
+    layout_properties: {grid_position: 'JXFYUI,UJDRAB'}
+  - name: button_4
+    properties: {text: Add Right Drag}
+    type: Button
+    layout_properties: {grid_position: 'JXFYUI,DKQQRY'}
+    event_bindings: {click: button_4_click}
   - type: form:OrderableList
     properties: {order_title: Order Test, numeration: numerical, allow_remove: true,
       item_editable: true, removal_confirm: true, confirm_removal: false, drag_enabled: true,
       visible: true}
     name: orderable_list_1
     layout_properties: {grid_position: 'OOJTJH,RESJUJ'}
+    event_bindings: {list_changed: orderable_list_1_list_changed}
+  - name: orderable_list_2
+    properties: {order_title: Order Test, numeration: numerical, allow_remove: true,
+      item_editable: true, removal_confirm: true, confirm_removal: false, drag_enabled: true,
+      visible: true}
+    type: form:OrderableList
+    layout_properties: {grid_position: 'OOJTJH,PJAZRG'}
     event_bindings: {list_changed: orderable_list_1_list_changed}
   - type: TextBox
     properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
