--- a/anvil.yaml
+++ b/anvil.yaml
@@ -5,6 +5,9 @@ services:
 - source: /runtime/services/tables.yml
   client_config: {}
   server_config: {}
+- source: /runtime/services/anvil/files.yml
+  client_config: {}
+  server_config: {file_table: files}
 startup: {type: form, module: Form1}
 package_name: Dragable_List
 allow_embedding: false
@@ -13,3 +16,18 @@ runtime_options: {version: 2, client_version: '3', server_version: python3-full,
 metadata: {title: Dragable List}
 startup_form: null
 native_deps: {head_html: '<script src="https://cdn.jsdelivr.net/npm/muuri@0.9.3/dist/muuri.min.js"></script>'}
+db_schema:
+  files:
+    client: none
+    server: full
+    columns:
+    - name: path
+      admin_ui: {order: 0, width: 200}
+      type: string
+    - name: file
+      admin_ui: {order: 1, width: 200}
+      type: media
+    - name: file_version
+      admin_ui: {order: 2, width: 200}
+      type: string
+    title: Files
