--- a/client_code/OrderableList/DragableList/form_template.yaml
+++ b/client_code/OrderableList/DragableList/form_template.yaml
@@ -11,4 +11,8 @@ components:
     col_widths: {}
     grid_position: RKKGUT,RPQDDD
   components: []
+- name: flow_panel_1
+  properties: {}
+  type: FlowPanel
+  layout_properties: {grid_position: 'VZILVC,URPHQI'}
 is_package: true
