--- a/client_code/OrderableList/DragableList/form_template.yaml
+++ b/client_code/OrderableList/DragableList/form_template.yaml
@@ -2,17 +2,15 @@ container:
   type: ColumnPanel
   event_bindings: {show: form_show}
 components:
-- type: ColumnPanel
-  properties: {role: grid, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
-    spacing_below: small, background: ''}
-  name: dragzone
-  layout_properties:
-    col_widths: {}
-    grid_position: RKKGUT,RPQDDD
-  components: []
-- name: flow_panel_1
+- name: dragzone_container
   properties: {}
   type: FlowPanel
   layout_properties: {grid_position: 'VZILVC,URPHQI'}
+  components:
+  - type: ColumnPanel
+    properties: {role: grid, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
+    name: dragzone
+    components: []
 is_package: true
