--- a/client_code/OrderableList/DragableList/form_template.yaml
+++ b/client_code/OrderableList/DragableList/form_template.yaml
@@ -2,13 +2,16 @@ container:
   type: ColumnPanel
   event_bindings: {show: form_show}
 components:
-- type: ColumnPanel
-  properties: {role: grid, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
-    spacing_below: small, background: ''}
-  name: dragzone
-  layout_properties:
-    col_widths: {}
-    grid_position: RKKGUT,RPQDDD
-  components: []
+- name: dragzone_container
+  properties: {}
+  type: FlowPanel
+  layout_properties: {grid_position: 'JYOYUB,RJIGVP'}
+  components:
+  - type: ColumnPanel
+    properties: {role: grid, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
+    name: dragzone
+    layout_properties: {width: 561.465388671875}
+    components: []
 is_package: true
