Created muuri_html; Edited settings

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -4,6 +4,7 @@ unique_ids:
     OrderableList: '1645713519570121797636397.2415'
     OrderableList.DragableList: '1645713567802485128378202.1916'
     OrderableList.ListItem: '1645714593953420446454903.1217'
+    muuri_html: '1703596410121369864176762.4151'
   modules: {}
   server_modules: {}
   assets:
