--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -8,6 +8,11 @@ components:
   name: content_panel
   layout_properties: {slot: default}
   components:
+  - name: button_4
+    properties: {text: Manual Component Setter}
+    type: Button
+    layout_properties: {grid_position: 'DIDRBV,EUUANG'}
+    event_bindings: {click: button_4_click}
   - type: TextBox
     properties: {role: null}
     name: text_box_1
