added tag property to the list items

--- a/client_code/OrderableList/ListItem/form_template.yaml
+++ b/client_code/OrderableList/ListItem/form_template.yaml
@@ -22,3 +22,4 @@ custom_component: true
 properties:
 - {name: item_text, type: string, default_value: '', important: true, default_binding_prop: true}
 - {name: index, type: number, important: true}
+- {name: tag, type: string, default_value: '', important: true}
