--- a/client_code/OrderableList/ListItem/form_template.yaml
+++ b/client_code/OrderableList/ListItem/form_template.yaml
@@ -1,7 +1,10 @@
-container:
-  type: ColumnPanel
-  properties: {col_widths: '{}'}
-  event_bindings: {show: form_show}
+properties:
+- {name: item_text, type: string, default_value: '', important: true, default_binding_prop: true}
+- {name: index, type: number, important: true}
+- {name: tag, type: string, default_value: '', important: true}
+is_package: true
+events: []
+custom_component: true
 components:
 - type: ColumnPanel
   properties: {role: card, col_widths: '{"VWCIPC":55,"VUKETJ":5}'}
@@ -17,9 +20,7 @@ components:
     type: Button
     layout_properties: {grid_position: 'YCPUXX,VUKETJ'}
     event_bindings: {click: remove_button_click}
-is_package: true
-custom_component: true
-properties:
-- {name: item_text, type: string, default_value: '', important: true, default_binding_prop: true}
-- {name: index, type: number, important: true}
-- {name: tag, type: string, default_value: '', important: true}
+container:
+  type: ColumnPanel
+  properties: {col_widths: '{}'}
+  event_bindings: {show: form_show}
